--- a/contribution.html
+++ b/contribution.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="footer.css">
     <link rel="stylesheet" href="contribute.css">
+    <script src="js/contr.js"></script>
 </head>
 <body>
     <header class="navbar">
