--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
         </nav>
         <div class="nav-buttons">
             <button class=" signup-btn login-btn" onclick="location.href='login.html'">Login</button>
-            
+            <button class="log-out">Log out</button>
+
         </div>
     </header>
 
